  Added: New status command 'system-threads', dumps all JVM threads as strings (superuser only).
  Added: New status command 'login-failures', shows a list of failed login attempts per user or ip (for most interfaces).
  Added: New status command 'proxy-plugins' for listing all loaded plugins and any associated info they publish.
  Added: New ctrl command 'gen-keystore', auto creates a java keystore for using the status web with SSL.
  Added: New ctrl command 'disable-connector', temporarily disables a specified connector.
  Added: New ctrl command 'set-profile-debug', temporarily changes debug flags (set to false for ALL to delete ecm logs).
  Added: New ctrl command 'set-user-debug', temporarily changes debug for a user (enabling log-ecm, log-emm, log-zap).
  Added: New ctrl command 'remove-failed', removes entries matching specified wildcard mask from login-failures.
  Added: Attribute 'time' to <jvm> (proxy-status output). Local system time as a rfc822 date.
  Added: Attribute 'cdata' to <service> (most output containing services). Custom data for service mapping (chid/ident).
  Added: Element <remote-info> to <connector> (cws-connectors output). List of <cws-param> elements with name/value
  attributes, containing arbitrary information about the connector.
  Added: Attributes 'network-id', 'ca-id', 'provider-ident' and 'origin-id' to <ecm> (transaction logs). These are only
  included when the transaction occured in the '*' profile, and origin-id only for CspSession transactions.
  Added: Attribute 'au' to <session> for NewcamdSessions. Indicates which connector the session is forwarding emms to.
  Added: Attribute 'build' to <proxy-status>. The build number for the running cardservproxy.jar.


0.8.13 - 2009-10-18

- Added: New attribute per profile 'network-id' (the original dvb network id, 4 hex digits). This will uniquely
  identify profiles between proxies, instead of ca-id. It will also be used in filtering enigma services files. 